# matchbox-panel

./: ChangeLog  Makefile.am  configure.ac  matchbox-panel.doap
applets/: Makefile.am  mb-applet-battery.c  mb-applet-clock.c  mb-applet-launcher.c  mb-applet-menu-launcher.c  mb-applet-system-monitor.c  mb-applet-wireless.c
applets/dotdesktop/: Makefile.am  mb-launcher-term.desktop
applets/icons/: Makefile.am  battery.xpm  broken-0.xpm  mbmenu.xpm  minisys.xpm  minitimestrip.xpm  no-link-0.xpm  oval_filled.xpm  signal-1-40.xpm  signal-41-60.xpm  signal-61-80.xpm  signal-81-100.xpm
applets/small-icons/: Makefile.am  broken-0.xpm  mbdesktop.xpm  no-link-0.xpm  signal-1-40.xpm  signal-41-60.xpm  signal-61-80.xpm  signal-81-100.xpm
po/: Makefile.am  cs.po  de.po  en_GB.po  es_ES.po  fi_FI.po  fr_FR.po  zh_TW.po
src/: Makefile.am  msg.c  msg.h  panel.c  panel.h  panel_app.c  panel_menu.c  session.c  session.h
