files =                                                        \
  mb-applet-battery.desktop         mb-applet-wireless.desktop \
  mb-applet-clock.desktop           mb-launcher-term.desktop   \
  mb-applet-menu-launcher.desktop   mb-applet-system-monitor.desktop

EXTRA_DIST = $(files)

desktopdir = $(datadir)/applications/
desktop_DATA = $(files)

